Gestion des utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
@@ -20,8 +20,7 @@
 
 	<!-- faq list -->
 	<ul id="user-list" class="list-group list-group-sp sortable"></ul>
-	<a class="btn btn-sm btn-white new-content user-content pull-right-lg"><i class="icon-plus pull-left"></i>Ajouter un contenu</a>
-	<a class="btn btn-sm btn-white new-category pull-right-lg m-l-sm"><i class="icon-plus pull-left"></i>Ajouter une catégorie</a>
+	<a class="btn btn-sm btn-white new-user pull-right-lg m-l-sm"><i class="icon-plus pull-left"></i>Ajouter un utilisateur</a>
 <!--
 	<ul id="user-List">
 		<thead>
@@ -74,7 +73,6 @@
 		{% else %}
 			Vous ne pouvez plus ajouter d'utilisateur<br />
 		{% endif %}
-
 	</div>
 {% endblock %}
 
