Gestion des utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
@@ -163,7 +163,7 @@
   {% block bootstrap %}
     {% autoescape false %}
     <script type="text/javascript">
-        var root = '{{ path('lily_faq') }}';
+        var root = '{{ path('lily_user') }}';
     </script>
     {% endautoescape %}
   {% endblock %}
