Gestion des utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -1,1 +1,8 @@
-Utilisateur
+<div class="view" data-id="<%=id%>">
+  <button class="destroy close hover-action">×</button>
+  <div class="userList-item">
+    <i class="icon-reorder"></i>
+    <span class="user-name"><%=username %></span>
+    <input class="edit form-control" type="text" value="<%=title %>">
+  </div>
+</div>
