Gestion des utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -3,6 +3,6 @@
   <div class="userList-item">
     <i class="icon-reorder"></i>
     <span class="user-name"><%=username %></span>
-    <input class="edit form-control" type="text" value="<%=title %>">
+    <input class="edit form-control" type="text" value="<%=username %>">
   </div>
 </div>
