--- a/src/Lily/UserBundle/Resources/views/Manage/userForm.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/userForm.html.twig
@@ -1,7 +1,7 @@
 <div id="userFormContent">
 	{{ form_errors(form) }}
 
-	{% set fields = { 'lastname':'Nom', 'firstname':'Prénom', 'plainPassword' : 'Mot de passe', 'email':'Email', 'phone':'Téléphone', 'post':'Poste occupé', 'country':'Pays', 'allRoles':'Accès'} %}
+	{#% set fields = { 'lastname':'Nom', 'firstname':'Prénom', 'plainPassword' : 'Mot de passe', 'email':'Email', 'phone':'Téléphone', 'post':'Poste occupé', 'country':'Pays', 'allRoles':'Accès'} %}
 	{% set selectFields = ['allRoles'] %}
 	{% set repeatedFields = {'plainPassword' : ['Mot de passe', 'Confirmation']} %}
 
@@ -25,6 +25,6 @@
 				{% endif %}
 			{% endif %}
 		</div>
-	{% endfor %}
+	{% endfor %#}
 	{{ form_rest(form) }}
 </div>
