--- a/src/Lily/UserBundle/Resources/views/Manage/userForm.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/userForm.html.twig
@@ -1,5 +1,5 @@
 <div id="userFormContent">
-dump(form)
+{{ dump(form) }}
 
 	{#% set fields = { 'lastname':'Nom', 'firstname':'Prénom', 'plainPassword' : 'Mot de passe', 'email':'Email', 'phone':'Téléphone', 'post':'Poste occupé', 'country':'Pays', 'allRoles':'Accès'} %}
 	{% set selectFields = ['allRoles'] %}
