Affichage liste utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -1,8 +1,7 @@
 <div class="view" data-id="<%=id%>">
   <button class="destroy close hover-action">×</button>
   <div class="userList-item">
-    <i class="icon-reorder"></i>
+    <img src="<%=avatar %>" alt="Avatar" />
     <span class="user-name"><%=username %></span>
-    <input class="edit form-control" type="text" value="<%=username %>">
   </div>
 </div>
