--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -1,7 +1,7 @@
 <div class="view" data-id="<%=id%>">
   <button class="destroy close hover-action">×</button>
   <div class="userList-item">
-    <img src="<%=avatar %>" alt="Avatar" />
-    <span class="user-name"><%=username %></span>
+    <img src="<%=avatar %>" alt="Avatar" width="110" height="110"/>
+    <div class="user-info"><%=username %></div>
   </div>
 </div>
