--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -2,6 +2,6 @@
   <button class="destroy close hover-action">×</button>
   <div class="userList-item">
     <img src="<%=avatar %>" alt="Avatar" width="110" height="110"/>
-    <div class="user-info"><%=username %></div>
+    <div class="user-info"><%=lastName %> <%=firstName %></div>
   </div>
 </div>
