--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -1,7 +1,16 @@
 <div class="view" data-id="<%=id%>">
   <button class="destroy close hover-action">×</button>
   <div class="userList-item">
-    <img src="<%=avatar %>" alt="Avatar" width="110" height="110"/>
-    <div class="user-info"><%=lastname %> <%=firstname %></div>
+    <img src="<%=avatar %>" alt="Avatar" width="70" height="70"/>
+    <div class="user-info">
+	    <div class="user-name"><%=lastname %> <%=firstname %></div>
+	    <div class="user-role">
+	    	<% if ('ROLE_ADMIN' in roles) { %>
+	    		Administrateur
+	    	<% } %>
+	    </div>
+	    <div class="user-lastLog"></div>
+    </div>
+
   </div>
 </div>
