Affichage liste utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -3,7 +3,7 @@
   <div class="userList-item">
     <img src="<%=avatar %>" alt="Avatar" width="70" height="70"/>
     <div class="user-info">
-	    <div class="user-name"><%=lastname.toUpper() %> <%=firstname %></div>
+	    <div class="user-name"><%=(lastname.toUpper()) %> <%=firstname %></div>
 	    <div class="user-role">
 	    	<% 
 	    	var role="";
