Affichage liste utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -7,9 +7,9 @@
 	    <div class="user-role">
 	    	<% 
 	    	var role="";
-	    	if (roles.indexOf('ROLE_ADMIN')!==-1) {
+	    	if (roles.indexOf('ROLE_ADMIN')!==-1)
 	    		role="Administrateur";
-	    	} else {
+	    	else {
 	    	 	if (roles.indexOf('ROLE_CHAT_OPERATOR')!==-1) {
 	    	 		role+="Opérateur Live chat";
 	    		}
