Affichage liste utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -14,7 +14,7 @@
 	    	 		role+="Opérateur Live chat";
 	    		}
 	    		if (roles.indexOf('ROLE_KNOWLEDGE_OPERATOR')!==-1) {
-	    			role+=(role==="") ? "Opérateur" ? " et ";
+	    			role+=(role==="") ? "Opérateur" : " et ";
 	    			role+="Base de connaissance";
  				}
  			} %>
