--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -22,7 +22,7 @@
 	    </div>
 	    <div class="user-lastLog">
 	    	<%
-	    		var d=new Date(lastLogin)
+	    		var d=new Date(last_login)
 	    		var date_human=d.getDate() + "/" + (d.getMonth()+1) +"/" + (d.getYear()-100);
 	    	%>
 	    	Dernière connexion le <%=date_human %></div>
