--- a/src/Lily/UserBundle/Resources/public/css/userManager.css
+++ b/src/Lily/UserBundle/Resources/public/css/userManager.css
@@ -1,7 +1,8 @@
 .userList-item .user-info {
     display: inline-block;
+    font-size: 10px;
+    line-height: 23px;
     padding-left: 20px;
-    font-size: 16px;
     vertical-align: top;
 }
 
