--- a/src/Lily/UserBundle/Resources/public/css/userManager.css
+++ b/src/Lily/UserBundle/Resources/public/css/userManager.css
@@ -6,6 +6,10 @@
     vertical-align: top;
 }
 
+#user-list .close {
+ font-size:30px;
+}
+
 #user-list .active {
     background: none repeat scroll 0 0 #58cef6;
     color: white !important;
