--- a/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
@@ -74,8 +74,8 @@
                     {% set maxusers=0 %}
                     {% set rolesShowed=[] %}
 
-                    <!-- faq list -->
-                    <ul id="user-list" class="list-group list-group-sp sortable"></ul>
+                    <!-- user list -->
+                    <ul id="user-list" class="list-group list-group-sp"></ul>
                     <a class="btn btn-sm btn-white new-user pull-right-lg m-l-sm"><i class="icon-plus pull-left"></i>Ajouter un utilisateur</a>
                   <!--
                     <ul id="user-List">
