Affichage liste utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -1,1 +1,19 @@
-Edition utilisateur
+  <div class="vbox">
+    <section class="scrollable">
+      <div class="wrapper">
+        <div class="clearfix m-b">
+          <div class="clear">
+            <div class="h5 m-t-xs m-b-xs">Utilisateur</div>
+            <small class="text-muted">Nous vous conseillons de limiter votre réponse à 300 caractères.</small> 
+            <div class="form-group m-t">
+              <input id="user-editor" type="text" name="username" class="form-control input-sm" value="<%= username %>" /> 
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="dk footer text-center">
+      <button class="btn btn-sm btn-success button-update">Sauvegarder</button>
+      <button class="btn btn-sm btn-danger button-cancel m-l">Annuler</button>
+    </footer> 
+  </div>
