Affichage liste utilisateur (+fermeture d'une balise faq)

--- a/src/Lily/KnowledgeBundle/Resources/views/Faq/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Faq/index.html.twig
@@ -79,14 +79,15 @@
                 </aside>
                 <!-- /.aside -->
                 <aside id="faq-detail" class="aside-faq bg-light lter b-l hide">
-				<!-- Affichage du panneau de modification-->
+        				  <!-- Affichage du panneau de modification-->
+                </aside>
               </section>
             </section>
 	      </section>
         </aside>
         <!-- /.aside --> 
       </section>
-    </section>   
+    </section>
 	{% endblock %}
 
   </section>
