--- a/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
@@ -134,7 +134,7 @@
               </section>
             </aside>
             <!-- /.aside -->
-            <aside id="userManagement-detail" class="aside-userManagement bg-light lter b-l hide"></aside>
+            <aside id="user-detail" class="aside-userManagement bg-light lter b-l hide"></aside>
             <!-- Affichage du panneau de modification-->
           </section>
         </section>
