--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -3,11 +3,19 @@
       <div class="wrapper">
         <div class="clearfix m-b">
           <div class="clear">
-            <div class="h5 m-t-xs m-b-xs">Utilisateur</div>
-            <small class="text-muted">Nous vous conseillons de limiter votre réponse à 300 caractères.</small> 
-            <div class="form-group m-t">
-              <input id="user-editor" type="text" name="username" class="form-control input-sm" value="<%= username %>" /> 
-            </div>
+            <div class="h5 m-t-xs m-b-xs">Modifier un utilisateur</div> 
+            <form class="form-group m-t" id="user-editor">
+              <label for="lastname">Nom : </label><input type="text" name="lastname" class="form-control input-sm" value="<%= lastname %>" />
+              <label for="firstname">Prénom : </label><input type="text" name="firstname" class="form-control input-sm" value="<%= firstname %>" />
+              <label for="username">Identifiant : </label><input type="text" name="username" class="form-control input-sm" value="<%= username %>" />
+              <label for="email">Adresse mail : </label><input type="text" name="email" class="form-control input-sm" value="<%= email %>" />
+              <label for="phone">Téléphone : </label><input type="text" name="phone" class="form-control input-sm" value="<%= phone %>" />
+              <label for="post">Poste : </label><input type="text" name="post" class="form-control input-sm" value="<%= post %>" />
+              <label for="country">Pays : </label><input type="text" name="country" class="form-control input-sm" value="<%= country %>" />
+              <label for="avatar">Avatar : </label><input type="text" name="avatar" class="form-control input-sm" value="<%= avatar %>" />
+              <label for="roles">Droits : </label>
+              <label for="password">Mot de passe : </label>
+            </form>
           </div>
         </div>
       </div>
