--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -13,7 +13,10 @@
               <label for="post">Poste : </label><input type="text" name="post" class="form-control input-sm" value="<%= post %>" />
               <label for="country">Pays : </label><input type="text" name="country" class="form-control input-sm" value="<%= country %>" />
               <label for="avatar">Avatar : </label><input type="text" name="avatar" class="form-control input-sm" value="<%= avatar %>" />
-              <label for="roles">Droits : </label>
+              Droits :<br />
+              <input type="checkbox" name="ROLE_CHAT_OPERATOR" /> <label for="ROLE_CHAT_OPERATOR">Opérateur Live chat</label>
+              <input type="checkbox" name="ROLE_KNOWLEDGE_OPERATOR" /> <label for="ROLE_KNOWLEDGE_OPERATOR">Opérateur Base de connaissance</label>
+              <input type="checkbox" name="ROLE_ADMIN" /> <label for="ROLE_ADMIN">Administrateur</label> 
               <label for="password">Mot de passe : </label>
             </form>
           </div>
