Menu édition utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -14,9 +14,9 @@
               <label for="country">Pays : </label><input type="text" name="country" class="form-control input-sm" value="<%= country %>" />
               <label for="avatar">Avatar : </label><input type="text" name="avatar" class="form-control input-sm" value="<%= avatar %>" />
               Droits :<br />
-              <input type="checkbox" name="ROLE_CHAT_OPERATOR" /> <label for="ROLE_CHAT_OPERATOR">Opérateur Live chat</label>
-              <input type="checkbox" name="ROLE_KNOWLEDGE_OPERATOR" /> <label for="ROLE_KNOWLEDGE_OPERATOR">Opérateur Base de connaissance</label>
-              <input type="checkbox" name="ROLE_ADMIN" /> <label for="ROLE_ADMIN">Administrateur</label> 
+              <label for="ROLE_CHAT_OPERATOR"><input type="checkbox" name="ROLE_CHAT_OPERATOR" /> Opérateur Live chat</label><br />
+              <label for="ROLE_KNOWLEDGE_OPERATOR"><input type="checkbox" name="ROLE_KNOWLEDGE_OPERATOR" /> Opérateur Base de connaissance</label><br />
+              <label for="ROLE_ADMIN"><input type="checkbox" name="ROLE_ADMIN" /> Administrateur</label><br />
               <label for="password">Mot de passe : </label>
             </form>
           </div>
