--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -8,7 +8,9 @@
               <label for="lastname">Nom : </label><input type="text" name="lastname" class="form-control input-sm" value="<%= lastname %>" />
               <label for="firstname">Prénom : </label><input type="text" name="firstname" class="form-control input-sm" value="<%= firstname %>" />
               <label for="username">Identifiant : </label><input type="text" name="username" class="form-control input-sm" value="<%= username %>" />
-              <label for="email">Adresse mail : </label><input type="text" name="email" class="form-control input-sm" value="<%= email %>" />
+              <label for="password">Mot de passe : </label><input type="password" name="password" class="form-control input-sm" />
+              <label for="passwordConfirm">Confirmer : </label><input type="password" name="passwordConfirm" class="form-control input-sm" />
+              <label for="email">Adresse mail : </label><input type="email" name="email" class="form-control input-sm" value="<%= email %>" />
               <label for="phone">Téléphone : </label><input type="text" name="phone" class="form-control input-sm" value="<%= phone %>" />
               <label for="post">Poste : </label><input type="text" name="post" class="form-control input-sm" value="<%= post %>" />
               <label for="country">Pays : </label><input type="text" name="country" class="form-control input-sm" value="<%= country %>" />
@@ -17,7 +19,6 @@
               <label for="ROLE_CHAT_OPERATOR"><input type="checkbox" name="ROLE_CHAT_OPERATOR" /> Opérateur Live chat</label><br />
               <label for="ROLE_KNOWLEDGE_OPERATOR"><input type="checkbox" name="ROLE_KNOWLEDGE_OPERATOR" /> Opérateur Base de connaissance</label><br />
               <label for="ROLE_ADMIN"><input type="checkbox" name="ROLE_ADMIN" /> Administrateur</label><br />
-              <label for="password">Mot de passe : </label>
             </form>
           </div>
         </div>
