Menu édition utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -16,9 +16,9 @@
               <label for="country">Pays : </label><input type="text" name="country" class="form-control input-sm" value="<%= country %>" />
               <label for="avatar">Avatar : </label><input type="text" name="avatar" class="form-control input-sm" value="<%= avatar %>" />
               Droits :<br />
-              <label for="ROLE_CHAT_OPERATOR"><input type="checkbox" name="ROLE_CHAT_OPERATOR" /> Opérateur Live chat</label><br />
-              <label for="ROLE_KNOWLEDGE_OPERATOR"><input type="checkbox" name="ROLE_KNOWLEDGE_OPERATOR" /> Opérateur Base de connaissance</label><br />
-              <label for="ROLE_ADMIN"><input type="checkbox" name="ROLE_ADMIN" /> Administrateur</label><br />
+              <label for="ROLE_CHAT_OPERATOR"><input type="checkbox" id="ROLE_CHAT_OPERATOR" name="ROLE_CHAT_OPERATOR" /> Opérateur Live chat</label><br />
+              <label for="ROLE_KNOWLEDGE_OPERATOR"><input type="checkbox" id="ROLE_KNOWLEDGE_OPERATOR" name="ROLE_KNOWLEDGE_OPERATOR" /> Opérateur Base de connaissance</label><br />
+              <label for="ROLE_ADMIN"><input type="checkbox" id="ROLE_ADMIN" name="ROLE_ADMIN" /> Administrateur</label><br />
             </form>
           </div>
         </div>
