--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -8,7 +8,7 @@
               <label for="lastname">Nom : </label><input type="text" name="lastname" class="form-control input-sm" value="<%= lastname %>" />
               <label for="firstname">Prénom : </label><input type="text" name="firstname" class="form-control input-sm" value="<%= firstname %>" />
               <label for="username">Identifiant : </label><input type="text" name="username" class="form-control input-sm" value="<%= username %>" />
-              <label for="password">Mot de passe : </label><input type="password" name="password" value="" class="form-control input-sm" />
+              <label for="password">Mot de passe : </label><input type="password" name="password" class="form-control input-sm" />
               <label for="passwordConfirm">Confirmer : </label><input type="password" name="passwordConfirm" class="form-control input-sm" />
               <label for="email">Adresse mail : </label><input type="email" name="email" class="form-control input-sm" value="<%= email %>" />
               <label for="phone">Téléphone : </label><input type="text" name="phone" class="form-control input-sm" value="<%= phone %>" />
