--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -22,9 +22,12 @@
 	    </div>
 	    <div class="user-lastLog">
 	    	<%
-	    		var d=new Date(last_login)
-	    		var date_human=(d.getDate()<10 ? '0' : '') + d.getDate() + "/" + (d.getMonth()<9 ? '0' : '') + (d.getMonth()+1) +"/" + (d.getYear()-100);
-	    	%>
+	    		if(last_login!=null && last_login.toUpperCase()!='NULL') {}
+		    		var d=new Date(last_login);
+		    		var date_human=(d.getDate()<10 ? '0' : '') + d.getDate() + "/" + (d.getMonth()<9 ? '0' : '') + (d.getMonth()+1) +"/" + (d.getYear()-100);
+		    	} else { %>
+		    		Jamais conecté
+		    	<% } %>
 	    	Dernière connexion le <%=date_human %></div>
     </div>
 
