--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -6,7 +6,7 @@
             <div class="h5 m-t-xs m-b-xs">Modifier un utilisateur</div> 
             <form class="form-group m-t" id="user-editor">
               <label for="lastname">Nom : </label><input type="text" name="lastname" class="form-control input-sm" value="<%= lastname %>" />
-              <label for="firstname">Prénom : </label><input type="text" name="firstname" class="form-control input-sm" value="<%= firstname %>" />
+              <label for="firstname">Prénom : </label><input type="text" name="firstname" class="form-control input-sm" value="<%/*= firstname */%>" />
               <label for="username">Identifiant : </label><input type="text" name="username" class="form-control input-sm" value="<%= username %>" />
               <label for="password">Mot de passe : </label><input type="password" name="password" class="form-control input-sm" />
               <label for="passwordConfirm">Confirmer le mot de passe : </label><input type="password" name="passwordConfirm" class="form-control input-sm" />
