--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -5,9 +5,11 @@
 				<div class="clear">
 					<div class="h5 m-t-xs m-b-xs">Modifier un utilisateur</div> 
 					<form class="form-group m-t" id="user-editor">
-						{% for field in form %}
-							{{ form_row(field, {'value':'<%=' ~ field.vars.full_name ~ ' %>'}) }}{##}
-						{% endfor %}
+						{%verbatim%}
+							{% for field in form %}
+								{{ form_row(field, {'value':'<%=' ~ field.vars.name ~ ' %>'}) }}{##}
+							{% endfor %}
+						{%endverbatim%}
 					{#}
 						<label for="lastname">Nom : </label><input type="text" name="lastname" class="form-control input-sm" value="<%= lastname %>" />
 						<label for="firstname">Prénom : </label><input type="text" name="firstname" class="form-control input-sm" value="<%= firstname %>" />
@@ -34,3 +36,4 @@
 		<button class="btn btn-sm btn-danger button-cancel m-l">Annuler</button>
 	</footer> 
 </div>
+
