--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -5,11 +5,9 @@
 				<div class="clear">
 					<div class="h5 m-t-xs m-b-xs">Modifier un utilisateur</div> 
 					<form class="form-group m-t" id="user-editor">
-							{% for field in form %}
-								{%verbatim%}
-								{{ form_row(field, {'value':'<%=' ~ field.vars.name ~ ' %>'}) }}{##}
-								{%endverbatim%}
-							{% endfor %}
+						{% for field in form %}
+							{{ form_row() }}{##}
+						{% endfor %}
 					{#}
 						<label for="lastname">Nom : </label><input type="text" name="lastname" class="form-control input-sm" value="<%= lastname %>" />
 						<label for="firstname">Prénom : </label><input type="text" name="firstname" class="form-control input-sm" value="<%= firstname %>" />
