--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -1,24 +1,3 @@
-{% block widget_attributes %}
-  {% spaceless %}
-      id="{{ id }}" name="{{ full_name }}"{% if read_only %} disabled="disabled"{% endif %}{% if required %} required="required"{% endif %}{% if max_length %} maxlength="{{ max_length }}"{% endif %}{% if pattern %} pattern="{{ pattern }}"{% endif %}
-
-      {% for attrname,attrvalue in attr %}
-        {# Attribute value can be defined as an array. ['data']: contains the actual value, ['escape']: boolean (true if the value HAS to be escaped)#}
-        {% if attrvalue.data is defined %}
-          {% if not attrvalue.escape %}
-            {{ attrname }}="{{ attrvalue.data|raw }}"
-          {% else %}
-            {{ attrname }}="{{ attrvalue.data|e }}"
-          {% endif %}
-        {% else %}
-          {{ attrname }}="{{ attrvalue }}"
-        {% endif %} 
-      {% endfor %}
-
-  {% endspaceless %}
-{% endblock widget_attributes %}
-
-
 <div class="vbox">
 	<section class="scrollable">
 		<div class="wrapper">
@@ -26,14 +5,13 @@
 				<div class="clear">
 					<div class="h5 m-t-xs m-b-xs">Modifier un utilisateur</div> 
 					<form class="form-group m-t" id="user-editor">
+						{{ form_error(form) }}
 						{% for field in form %}
-
-							{{ form_row(field, {'value':'<%=' ~ field.vars.name ~ ' %>', 'escape':false}) }}
-
+							{{ form_label(form[field]) }}
+    						{{ form_errors(form[field]) }}
+							<input type="text" name="{{ field.vars.full_name }}" id="{{ field.vars.id }}" class="form-control input-sm" value="<%={{ field.vars.name }} %>" />
 						{% endfor %}
-					{#}
-						<label for="lastname">Nom : </label><input type="text" name="lastname" class="form-control input-sm" value="<%= lastname %>" />
-						<label for="firstname">Prénom : </label><input type="text" name="firstname" class="form-control input-sm" value="<%= firstname %>" />
+					{#}	<label for="firstname">Prénom : </label><input type="text" name="firstname" class="form-control input-sm" value="<%= firstname %>" />
 						<label for="username">Identifiant : </label><input type="text" name="username" class="form-control input-sm" value="<%= username %>" />
 						<label for="password">Mot de passe : </label><input type="password" name="password" class="form-control input-sm" />
 						<label for="passwordConfirm">Confirmer le mot de passe : </label><input type="password" name="passwordConfirm" class="form-control input-sm" />
