Menu édition utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -6,11 +6,11 @@
 					<div class="h5 m-t-xs m-b-xs">Modifier un utilisateur</div> 
 					<form class="form-group m-t" id="user-editor">
 						{{ form_errors(form) }}
-						{#} {% for field in form %}
+						 {% for field in form %}
 							{{ form_label(form[field]) }}
-    						{{ form_errors(form[field]) }}
-							<input type="text" name="{{ field.vars.full_name }}" id="{{ field.vars.id }}" class="form-control input-sm" value="<%={{ field.vars.name }} %>" />
-						{% endfor %} {##}
+    					{#}	{{ form_errors(form[field]) }}
+							<input type="text" name="{{ field.vars.full_name }}" id="{{ field.vars.id }}" class="form-control input-sm" value="<%={{ field.vars.name }} %>" />{##}
+						{% endfor %} 
 					{#}	<label for="firstname">Prénom : </label><input type="text" name="firstname" class="form-control input-sm" value="<%= firstname %>" />
 						<label for="username">Identifiant : </label><input type="text" name="username" class="form-control input-sm" value="<%= username %>" />
 						<label for="password">Mot de passe : </label><input type="password" name="password" class="form-control input-sm" />
