--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -8,9 +8,9 @@
 						{{ form_errors(form) }}
 						 {% for field in form %}
 							{{ form_label(field) }}
-    					{#}	{{ form_errors(field) }}
-							<input type="text" name="{{ form[field].vars.full_name }}" id="{{ form[field].vars.id }}" class="form-control input-sm" value="<%={{ form[field].vars.name }} %>" />{##}
-						{% endfor %} 
+    						{{ form_errors(field) }}
+							<input type="text" name="{{ field.vars.full_name }}" id="{{ field.vars.id }}" class="form-control input-sm" value="<%={{ field.vars.name }} %>" />
+						{% endfor %}
 					{#}	<label for="firstname">Prénom : </label><input type="text" name="firstname" class="form-control input-sm" value="<%= firstname %>" />
 						<label for="username">Identifiant : </label><input type="text" name="username" class="form-control input-sm" value="<%= username %>" />
 						<label for="password">Mot de passe : </label><input type="password" name="password" class="form-control input-sm" />
