--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -10,8 +10,9 @@
 						 	{% if field.vars.name!='_token' %}
 								{{ form_label(field) }}
 	    						{{ form_errors(field) }}
-								<input type="text" name="{{ field.vars.full_name }}" id="{{ field.vars.id }}" class="form-control input-sm" value="{{ '<% if(' }} {{ field.vars.name ~ ') { %> <%-' ~ field.vars.name ~ ' %> <% } %>' }}" />
-							{% endif %}
+	    						{{ '<% if(' }}
+{#}								<input type="text" name="{{ field.vars.full_name }}" id="{{ field.vars.id }}" class="form-control input-sm" value="{{ '<% if(' }} {{ field.vars.name ~ ') { %> <%-' ~ field.vars.name ~ ' %> <% } %>' }}" />
+{#}							{% endif %}
 						{% endfor %}
 					{#}	<label for="firstname">Prénom : </label><input type="text" name="firstname" class="form-control input-sm" value="<%= firstname %>" />
 						<label for="username">Identifiant : </label><input type="text" name="username" class="form-control input-sm" value="<%= username %>" />
