--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -1,5 +1,6 @@
 <div class="view" data-id="<%=id%>">
-  <button class="destroy close hover-action">×</button>
+  <i class="destroy hover-action icon-remove"></i>
+  <i class="view hover-action icon-edit"></o>
   <div class="userList-item">
     <img src="<%=avatar %>" alt="Avatar" width="70" height="70"/>
     <div class="user-info">
