Gestion ajout d'utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -1,6 +1,6 @@
 <div class="view" data-id="<%=id%>">
   <i class="destroy hover-action icon-remove"></i>
-  <i class="view hover-action icon-edit"></o>
+  <i class="view hover-action icon-edit"></i>
   <div class="userList-item">
     <img src="<%=avatar %>" alt="Avatar" width="70" height="70"/>
     <div class="user-info">
