Gestion ajout d'utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -1,6 +1,6 @@
 <div class="view" data-id="<%=id%>">
-  <i class="destroy hover-action icon-remove"></i>
-  <i class="view hover-action icon-edit"></i>
+  <button class="destroy hover-action icon-remove"></button>
+  <button class="view hover-action icon-edit"></button>
   <div class="userList-item">
     <img src="<%=avatar %>" alt="Avatar" width="70" height="70"/>
     <div class="user-info">
