--- a/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user.html.twig
@@ -1,6 +1,6 @@
 <div class="view" data-id="<%=id%>">
   <button class="destroy hover-action icon-remove close"></button>
-  <button class="view hover-action icon-edit close"></button>
+  <button class="edit hover-action icon-edit close"></button>
   <div class="userList-item">
     <img src="<%=avatar %>" alt="Avatar" width="70" height="70"/>
     <div class="user-info">
